Code generated related to KgeFileSetStatusCode model
